--- a/style.css
+++ b/style.css
@@ -81,11 +81,13 @@ nav .icons {
 
 nav i {
   font-size: 1.5rem;
-  padding-right: 0.6em;
+
+nav i:hover {
+  color: var(--accent);
 }
 
-nav i:last-child {
-  padding-right: 0;
+nav i:active {
+  color: var(--primary);
 }
 
 nav img {
@@ -102,17 +104,21 @@ button {
   border: none;
   font-size: 1rem;
   cursor: pointer;
-}
-
-.btn-primary {
   background: var(--accent);
   color: #fff;
   font-weight: 700;
   display: inline-block;
   border-radius: 5px;
-
   padding: 1rem 3rem;
-  margin: .5rem 0;
+  margin: 0.5rem 0;
+}
+
+button:hover {
+  background: var(--primary-dark);
+}
+
+button:active {
+  background: var(--primary);
 }
 
 @media screen and (max-width: 950px) {
