--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@
   --primary-dark: hsl(243, 87%, 12%);
   --accent: hsl(163, 95%, 43%);
   --grey: hsl(0, 0%, 50%);
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
 }
 
 body {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   color: var(--primary-dark);
   font-size: 18px;
 }
@@ -27,24 +27,19 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-  -ms-flex-direction: row-reverse;
-  flex-direction: row-reverse;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
 }
 
 .content {
-  width: 50%;
-  padding: 3rem;
+  min-width: 450px;
+  margin: auto;
+  padding: 2rem;
 }
 
 .hero {
   height: 100vh;
   position: relative;
-  min-width: 50%;
+  min-width: 180px;
+  width: 50%;
   background: #bdbafa;
   /* Old browsers */
   /* FF3.6-15 */
@@ -56,7 +51,8 @@ p {
 }
 
 .hero img {
-  min-width: 300px;
+  min-width: 150px;
+  max-width: 400px;
   width: 70%;
   margin: 0 auto;
   position: absolute;
@@ -68,11 +64,11 @@ p {
 
 nav {
   position: absolute;
+  z-index: 1;
   top: 0;
   right: 0;
-  left: 50%;
-  width: calc(50% - 6rem);
-  padding: 3rem;
+  left: 0;
+  margin: 2rem;
 }
 
 nav .icons {
@@ -81,6 +77,8 @@ nav .icons {
 
 nav i {
   font-size: 1.5rem;
+  padding-left: 0.6em;
+}
 
 nav i:hover {
   color: var(--accent);
